--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
             }
 
             #title {
-                position:absolute;
-                left:50%;
-                transform:translate(-50%, -20%);
-                font-size: 7.5em;
+                font-size: 2.5em;
                 font-family: Courier New, Courier, monospace;
             }
 
@@ -24,9 +21,6 @@
                 background-color: blanchedalmond;
             } 
             #round {
-                position:absolute;
-                left:50%;
-                transform:translate(-50%, -25%);
                 font-size: 1.5em;
                 font-family: Courier New, Courier, monospace;
 
@@ -35,7 +29,7 @@
     </head>
     <body>
         <h1 id="title">Ludum Dare 39</h1>
-        <div id="round">Round ?</div>
+        <div id="round">Round 1</div>
         <canvas id="canvas" width="850" height="600"></canvas>
     </body>
 </html>
